# bevy_prefab_editor

./: .gitignore  Cargo.toml  README.md
assets/: editor_bundles.ron  editor_properties.ron  prefab.scn
examples/: load_prefab.rs
src/: display.rs  editor.rs  entity.rs  lib.rs  main.rs
